FIXED : Z-index of Elements

--- a/style.css
+++ b/style.css
@@ -244,6 +244,7 @@ main {
   }
   .overlay{
     position: absolute;
+    z-index: 999;
     top: 0;
     bottom: 0;
     left: 0;
@@ -258,6 +259,7 @@ main {
     bottom: 0;
     left: 0;
     width: 60%;
+    z-index: 999;
     gap: 2;
     padding: 2rem;
     align-items: flex-start;
